--- a/firstproject/templates/mainadmin/admin_add.html
+++ b/firstproject/templates/mainadmin/admin_add.html
@@ -19,7 +19,7 @@
     <div class="dado_add_admin">
         <div class="leftbox">
             <h2>Add New Book</h2>
-            <form  method="post" >
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <label for="title"></label>
                 <input type="text" id="title" required placeholder="Title" name="title">
@@ -34,7 +34,7 @@
                 <textarea id="description" rows="4" required placeholder="Description" name="description"></textarea>
 
                 <label for="cover"></label>
-                <input type="url" id="cover" required placeholder="Image Url " name="cover">
+               <input type="file" id="cover" name="cover" accept="image/*"  >
 
                 <label for="pdf"></label>
                 <input type="file" id="pdf" >
