--- a/firstproject/templates/mainadmin/main-admin.html
+++ b/firstproject/templates/mainadmin/main-admin.html
@@ -40,95 +40,29 @@
         <!-- الي تحت يتعدل من الداتا بيز -->
 
             <tbody>
-                <tr date-id="row25">
-                    <td>Sherlock Holmes vs. Arsene Lupin</td>
-                    <td>Maurice Leblanc</td>
-                    <td>Thriller</td>
-                    <td class="actions">
-                        <a href="{% url 'edit'%}" class="btn" onclick="storeId(this)">Edit</a>
-                        <a href="#" class="btn btn-danger">Delete</a>
-                    </td>
-                </tr>
-                <tr date-id="row1">
-                    <td>Shatter me</td>
-                    <td>Tahereh Mafi</td>
-                    <td>Fantasy</td>
-                    <td class="actions">
-                        <a href="../editbook.html" class="btn" onclick="storeId(this)">Edit</a>
-                        <a href="#" class="btn btn-danger">Delete</a>
-                    </td>
-                </tr>
-
-                <tr date-id="row26">
-                    <td>The Great Gatsby</td>
-                    <td>F.Scott Fitzgerald</td>
-                    <td>Drama</td>
-                    <td class="actions">
-                        <a href="../editbook.html" class="btn" onclick="storeId(this)">Edit</a>
-                        <a href="#" class="btn btn-danger">Delete</a>
-                    </td>
-                </tr>
+    {% for book in books %}
+        <tr data-id="row{{ book.id }}">
+            <td>{{ book.title }}</td>
+            <td>{{ book.author }}</td>
+            <td>{{ book.category }}</td>
+            <td class="actions">
+                <a href="{% url 'edit' book.id %}" class="btn">Edit</a>
+                <a href="{% url 'delete' book.id %}" class="btn btn-danger">Delete</a>
+            </td>
+        </tr>
+    {% empty %}
+        <tr>
+            <td colspan="4">No books found.</td>
+        </tr>
+    {% endfor %}
+    </tbody>
 
 
-                <tr date-id="row18">
-                    <td>ELgazar</td>
-                    <td>Hasan ELgendi</td>
-                    <td>Horror</td>
-                    <td class="actions">
-                        <a href="../editbook.html" class="btn" onclick="storeId(this)">Edit</a>
-                        <a href="#" class="btn btn-danger">Delete</a>
-                    </td>
-                </tr>
-
-
-                <tr date-id="row15">
-                    <td>The Fine Print</td>
-                    <td>Lauren Asher</td>
-                    <td>Romance</td>
-                    <td class="actions">
-                        <a href="../editbook.html" class="btn" onclick="storeId(this)">Edit</a>
-                        <a href="#" class="btn btn-danger">Delete</a>
-                    </td>
-                </tr>
-
-                <tr date-id="row5">
-                    <td>The Housemaid</td>
-                    <td>Freida Mcfadden</td>
-                    <td>Thriller</td>
-                    <td class="actions">
-                        <a href="../editbook.html" class="btn" onclick="storeId(this)">Edit</a>
-                        <a href="#" class="btn btn-danger">Delete</a>
-                    </td>
-                </tr>
-
-
-                <tr date-id="row30">
-                    <td>Reminders Of Him</td>
-                    <td>Colleen Hoover</td>
-                    <td>Drama</td>
-                    <td class="actions">
-                        <a href="../editbook.html" class="btn" onclick="storeId(this)">Edit</a>
-                        <a href="#" class="btn btn-danger">Delete</a>
-                    </td>
-                </tr>
-
-                <tr date-id="row8">
-                    <td>Powerless</td>
-                    <td>Lauren Roberts</td>
-                    <td>Fantasy</td>
-                    <td class="actions">
-                        <a href="../editbook.html" class="btn" onclick="storeId(this)">Edit</a>
-                        <a href="#" class="btn btn-danger">Delete</a>
-                    </td>
-                </tr>
-            </tbody>
-
-
-        </table>
+    </table>
 
     </div>
 
-    <script src="{% static 'java/main-admin.js'%}"></script>
+    <!-- <script src="{% static 'java/main-admin.js'%}"></script> -->
 
 </body>
 
