--- a/firstproject/templates/books/borrowpage.html
+++ b/firstproject/templates/books/borrowpage.html
@@ -1,87 +1,42 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>Borrow list</title>
-  <link rel="stylesheet" href="{% static 'css/borrowpage.css'%}">
+  <link rel="stylesheet" href="{% static 'css/borrowpage.css' %}">
 </head>
 
 <body>
 
   <div id="es_nav">
-    <a href="../web_category/gad.html"><img src="{% static 'image/house.png'%}" class="reg-img" id="es_home"></a>
-    <a href="../web_category/gad2.html"><img src="{% static 'image/cart.png'%}" class="reg-img" id="es_cart"></a>
-    <a href="#"><img src="{% static 'image/bar.png'%}" class="reg-img" id="es_bar"></a>
+    <a href="{% url 'books' %}"><img src="{% static 'image/house.png' %}" class="reg-img" id="es_home"></a>
+    <a href="#"><img src="{% static 'image/cart.png' %}" class="reg-img" id="es_cart"></a>
+    <a href="#"><img src="{% static 'image/bar.png' %}" class="reg-img" id="es_bar"></a>
     <h4>BOOKTY.com</h4>
     <input type="search" id="es_search" placeholder="Search">
   </div>
 
-  <br>
-  <br>
-  <br>
+  <br><br><br>
 
   <h3 id="es_head">Borrowed Books</h3>
+  <br><br>
 
+  {% if reserved_books %}
+    <div class="dado_toptrend">
+      {% for book in reserved_books %}
+        <figure class="fig_hover">
+          <img src="{{ book.photos.url }}" class="dado_book">
+          <figcaption>{{ book.title }}</figcaption>
+        </figure>
+        {% if forloop.counter|divisibleby:4 %}
+          </div><div class="dado_toptrend">
+        {% endif %}
+      {% endfor %}
+    </div>
+  {% else %}
+    <p style="text-align:center;">No reserved books.</p>
+  {% endif %}
 
-  <br>
-  <br>
-
-
-  <div class="dado_toptrend">
-    <figure class="fig_hover">
-      <img src="fan.jpg" class="dado_book">
-      <figcaption>On Read</figcaption>
-    </figure>
-
-    <figure>
-      <img src="img2.jpg" class="esraa_book">
-      <figcaption>Not available</figcaption>
-    </figure>
-
-    <figure class="fig_hover">
-      <img src="img3.jpg" class="dado_book">
-      <figcaption>Completed</figcaption>
-    </figure>
-
-    <figure class="fig_hover">
-      <img src="img4.jpg" class="dado_book">
-      <figcaption>Completed</figcaption>
-    </figure>
-
-  </div>
-
-  <br>
-
-  <div class="dado_toptrend">
-    <figure class="fig_hover">
-      <img src="hor1.jpg" class="dado_book">
-      <figcaption>On Read</figcaption>
-    </figure>
-
-    <figure class="fig_hover">
-      <img src="fan2.jpg" class="dado_book">
-      <figcaption>Completed</figcaption>
-    </figure>
-
-    <figure>
-      <img src="fan3.jpg" class="esraa_book">
-      <figcaption>Not available</figcaption>
-    </figure>
-
-    <figure class="fig_hover">
-      <img src="fan4.jpg" class="dado_book">
-      <figcaption>Completed</figcaption>
-    </figure>
-
-  </div>
-  <script>
-      
-    
-  </script>
-  
-  
 </body>
-
 </html>
