--- a/firstproject/templates/authentication/login.html
+++ b/firstproject/templates/authentication/login.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="left-side">
             <div>   
-                <img src="{% static 'image/login2.png'%}" width="728" height="" class="mainimage" >
+                <img src="{% static 'image/login2.png'%}" style="height: 548px;" class="mainimage" >
             </div>
             <div class="overlay"> Don't Have <br>account?</div>
             <div class = "button2">
