--- a/firstproject/templates/authentication/starting.html
+++ b/firstproject/templates/authentication/starting.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>BOOKTY.com</title>
     <link rel="stylesheet" href="{% static 'css/starting.css'%}">
-    <body style="background: url('{% static 'image/final222.png' %}') no-repeat; background-size: 1589px 714px; background-color: #242424;">
+    <body style="background: url('{% static 'image/final222.png' %}') no-repeat; background-size: 1589px 780px; background-color: #242424;">
 
 </head>
 
@@ -22,7 +22,7 @@
              there’s something waiting for you.<br><br>
         </p>
         <div class = "button1">
-            <a href="{% url 'login'%}" class="b1"> Get started</a>
+            <a href="{% url 'signup'%}" class="b1"> Get started</a>
         </div>
         <div class = "button2">
             <a href="{% url 'login'%}" class="b2"> Login</a>
