--- a/firstproject/templates/books/gad.html
+++ b/firstproject/templates/books/gad.html
@@ -15,8 +15,10 @@
   <!-- Navigation Bar -->
   <div id="dado_nav">
     <img src="{% static 'image/house.png'%}" class="reg-img" id="dado_home">
-    <img src="{% static 'image/cart.png'%}" class="reg-img" id="dado_cart" onclick="window.location.href='gad2.html'">
-    <img src="{% static 'image/bar.png'%}" class="reg-img" id="dado_bar" onclick="window.location.href='../Borrowed_Books/borrowpage.html'">
+    <img src="{% static 'image/cart.png'%}" class="reg-img" id="dado_cart" onclick="window.location.href='{% url 'gad-page'%}'">
+    <img src="{% static 'image/bar.png'%}" class="reg-img" id="dado_bar" onclick="window.location.href='{% url 'borrowlist'%}'">
+    <img src="{% static 'image/logout.png'%}" class="reg-img" id="dado_logout" style="margin-left: 1200px; width: 3%; height: 3%;" onclick="window.location.href='{% url 'login'%}'">
+
     <h4>BOOKTY.com</h4>
   </div>
 
@@ -31,12 +33,15 @@
     
       <div class="carousel">
         <div class="book active">
+          <a href="{% url 'book_detail' 32 %}">
           <img src="{% static 'image/fan.jpg'%}" class="dado_book" data-author="Amr Abdelhameed" data-title="Rules of jarteen" data-av="true"
           data-cate="FANTASY"
           data-desc=" is a gripping fantasy novel set in a mysterious land governed by ancient, unbreakable laws. When a young man enters Gartin, he discovers secrets hidden behind the rules and faces choices that could change everything. Full of mystery, tension, and powerful emotions, the story explores loyalty, freedom, and the price of truth"
           onclick="handleClick(this)">
+          </a>
         </div>
         <div class="book">
+          <a href="{% url 'book_detail' 28 %}">
           <img src="{% static 'image/fan1.jpg'%}" class="dado_book" 
           data-author="Aracne Fallen" 
           data-title="A Wave of Fates" 
@@ -44,8 +49,10 @@
           data-cate="FANTASY"
           data-desc="is a gripping fantasy novel where ancient powers clash and heroes struggle to shape their world's destiny. As dark secrets and deadly conspiracies unfold, the characters are drawn into a battle that could change everything. Blending magic, action, and emotion, this story takes readers on an unforgettable journey through a richly built world"
           onclick="handleClick(this)">
+          </a>
         </div>
         <div class="book">
+          <a href="{% url 'book_detail' 30 %}">
           <img src="{% static 'image/fan3.jpg'%}" class="dado_book" 
           data-author="Lauren Roberts" 
           data-title="Powerless" 
@@ -53,8 +60,10 @@
           data-cate="FANTASY"
           data-desc="Is a thrilling fantasy novel about a girl born without powers in a world where magic decides everything. Fighting against fate, secrets, and impossible odds, she must find her own strength to survive. Full of danger, romance, and rebellion, Powerless is a story about courage when the world says you have none."
           onclick="handleClick(this)">
+          </a>
         </div>
         <div class="book">
+          <a href="{% url 'book_detail' 31 %}">
           <img src="{% static 'image/fan4.jpg'%}" class="dado_book" 
         data-author="Amr Abdelhameed" 
         data-title="Zekola land" 
@@ -62,23 +71,43 @@
         data-cate="FANTASY" 
         data-desc=" is a captivating fantasy novel about a mysterious land where people trade not with money, but with their intelligence. When a young man accidentally finds himself in Zikola, he must navigate a world ruled by wisdom, sacrifice, and danger. Full of suspense and imagination, the story explores the true value of thought and emotion."     
         onclick="handleClick(this)">
+            
         </div>
         <div class="book">
-          <img src="{% static 'image/hor1.jpg'%}" class="dado_book" data-author="Stephen King" data-title="IT" data-av="true" data-cate="HORROR"
+        <a href="{% url 'book_detail' 38 %}">
+          <img src="{% static 'image/hor1.jpg'%}" class="dado_book" 
+          data-author="Stephen King" 
+          data-title="IT" 
+          data-av="true" 
+          data-cate="HORROR"
           data-desc="is a chilling horror novel about a group of childhood friends who face an ancient, shape-shifting evil that preys on their deepest fears. Set in the haunting town of Derry, Maine, the story weaves between past and present as they fight a terror that never truly dies. Dark, psychological, and unforgettable, It explores fear, friendship, and the scars that last a lifetime"
           onclick="handleClick(this)">
+        </a>
         </div>
         <div class="book">
-          <img src="{% static 'image/hor2.jpg'%}" class="dado_book" data-author="Ahmed Younis" data-title="Nader Fouda" data-av="true"
+          <a href="{% url 'book_detail' 39 %}">
+          <img src="{% static 'image/hor2.jpg'%}" 
+          class="dado_book" 
+          data-author="Ahmed Younis" 
+          data-title="Nader Fouda" 
+          data-av="true"
           data-cate="HORROR"
           data-desc=" is a thrilling horror novel following a journalist who investigates supernatural mysteries hidden in the shadows of everyday life. As he digs deeper, he uncovers terrifying secrets and faces forces beyond imagination. Blending suspense, folklore, and chilling encounters, Nader Foda delivers a gripping journey into the unknown."
           onclick="handleClick(this)">
+          </a>
         </div>
         <div class="book">
-          <img src="{% static 'image/hor4.jpg'%}" class="dado_book" data-author="Hassan ELGendi" data-title="Smile You Are Dead" data-av="true"
-          data-cate="HORROR" data-desc=" is a gripping horror novel where a group of strangers is trapped inside a cursed house filled with terrifying secrets. As fear and paranoia grow, they must face the horrors hidden within — and within themselves. Full of suspense, psychological fear, and shocking twists, Smile, You're Dead is a chilling journey into pure terror.
-
+          <a href="{% url 'book_detail' 41 %}">
+          <img src="{% static 'image/hor4.jpg'%}" 
+          class="dado_book" 
+          data-author="Hassan ELGendi" 
+          data-title="Smile You Are Dead" 
+          data-av="true"
+          data-cate="HORROR" 
+          data-desc=" is a gripping horror novel where a group of strangers is trapped inside a cursed house filled with terrifying secrets. As fear and paranoia grow, they must face the horrors hidden within — and within themselves. Full of suspense, psychological fear, and shocking twists, Smile, You're Dead is a chilling journey into pure terror.
+          
           " onclick="handleClick(this)">
+          </a>
         </div>
         
         
@@ -121,7 +150,7 @@
   
   <div class="Discover-more">
     <img src="{% static 'image/G.png'%}" alt="">
-    <button class="btn" onclick="window.location.href='../dadofinal/html.html'">Discover More</button>
+    <button class="btn" onclick="window.location.href='{% url 'html'%}'">Discover More</button>
 
   </div>
 
