dado&esraa added final web backend

--- a/firstproject/templates/authentication/try.html
+++ b/firstproject/templates/authentication/try.html
@@ -31,7 +31,10 @@
                 <input type="password" placeholder="Password" required style="margin-top:10px; margin-bottom:20px ;" name="password">
                 <input type="password" placeholder="Confirm Password" required style="margin-top:10px; margin-bottom:20px ;">
       </div>
-            <button class="sign-up-btn" >SIGN UP</button>
+    
+         <button class="sign-up-btn" onclick="window.alert('Account Created Successfully..Go to Login page')" >SIGN UP</button>
+     
+           
         </div>
     </form>
     <div class="right-box">
